fixed z-index on quote

--- a/style.css
+++ b/style.css
@@ -84,12 +84,14 @@ body {
     margin: 1rem 0 2rem;
     font-size: 1.2rem;
     font-weight: 700;
+    position: relative;
     z-index: 1000;
 }
 
 .name_container {
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .dark {
